--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1 Aula</title>
+    <style>
+        body{
+            background-color: rgb(105, 105, 173);/*cor de fundo*/
+            color: white; /*cor da fonte*/
+            font: normal 25pt Arial;/*tipo de fonte, tamanho*/
+        
+        }
+        h1 {
+            color: rgb(255, 212, 22);
+        }
+    </style><!--Style (estilo) configurado dentro do cabeçario-->
 </head>
 <body>
-    
+    <h1>Olá, Mundo!</h1>
+    <p>Já me livrei da maldição!</p>
+    <script>
+        alert('Minha primeira mensagem');
+        prompt('Qual o seu nome? ');
+        confirm('Está gostando de JS?');
+    </script>
+
 </body>
 </html>
