--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -15,7 +15,7 @@
         h1 {
             color: rgb(255, 212, 22);
         }
-    </style><!--Style (estilo) configurado dentro do cabeçario-->
+    </style><!--Style (estilo) configurado dentro do cabeçalho-->
 </head>
 <body>
     <h1>Olá, Mundo!</h1>
