--- a/aula13/ambiente.html
+++ b/aula13/ambiente.html
@@ -7,13 +7,13 @@
     <title>Modelo de Exercício</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body onload="Carregar()">
     <header>
-        <h1>Título</h1>
+        <h1>Iniciando while</h1>
     </header>
     <section>
-        <div>
-        Testando...
+        <div id="msg">
+        
         </div>
         <div>
 
@@ -22,5 +22,6 @@
     <footer>
         <p>&copy; CursoemVídeo</p>
     </footer>
+    <script src="ambiente.js"></script>
 </body>
 </html>
