--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -20,6 +20,7 @@
 <body>
     <h1>Olá, Mundo!</h1>
     <p>Já me livrei da maldição!</p>
+    <p>teste</p>
     <script>
         alert('Minha primeira mensagem');
         prompt('Qual o seu nome? ');
